# claude-tools

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: compact-traceback-logged.sh  compact-traceback.sh
ctools/: __init__.py  trace_compactor.py
tests/: __init__.py  test_cli.py  test_trace_compactor.py
