[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-tools"
version = "0.1.0"
description = "Hooks and tools for Claude Code"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tarek Ziade", email = "tarek@ziade.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["claude", "claude-code", "hooks", "tools", "traceback"]

[project.urls]
Homepage = "https://github.com/tarekziade/claude-tools"
Repository = "https://github.com/tarekziade/claude-tools"
Issues = "https://github.com/tarekziade/claude-tools/issues"

[project.scripts]
claude-trace-compactor = "ctools.trace_compactor:_cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ctools*"]
